fix table nowrap issue

--- a/Resources/public/less/admin.less
+++ b/Resources/public/less/admin.less
@@ -222,6 +222,9 @@
   font-size: @fontSizeSmall;
   line-height: 14px;
   overflow: hidden;
+}
+
+.nowrap{
   white-space: nowrap;
 }
 
@@ -230,6 +233,7 @@
   padding-bottom: 2px;
   text-align: right;
   overflow: visible;
+  white-space: nowrap;
 }
 
 .table-compact tfoot tr th {
